# evolutionsimulated

./: .gitignore  Cargo.toml  LICENSE  README.md  run.sh
src/: config.rs  creature.rs  gene.rs  lib.rs  main.rs  render.rs  utils.rs  web.rs  world.rs
web/: bootstrap.js  index.css  index.html  index.js
