[package]
name = "evolution-simulated"
version = "0.1.0"
authors = ["roxgib <33942237+roxgib@users.noreply.github.com>"]
edition = "2021"
description = "A project to simulate evolution. Written in Rust, compiles natively and to Web Assembly"
repository = "https://github.com/roxgib/evolution-simulator"
license = "MIT License"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

#[features]
#default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
rand_distr = "*"
json = "*"
js-sys = "*"
rustc-hash = "*"
lazy_static = "*"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'ImageBitmap',
  'console',
]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
criterion = "0.3"
wasm-bindgen-test = "0.3.13"

[profile.release]
debug = true
# Tell `rustc` to optimize for small code size.
# opt-level = "s"